--- a/auth/views/head.ejs
+++ b/auth/views/head.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title><%= title %></title>
+    <title>%= title %</title>
     <style>
       body {
         padding: 50px;
@@ -13,7 +13,7 @@
           color: red
       }
       .success {
-          color: green;
+          color: rgb(56, 147, 189);
       }
     </style>
   </head>
