--- a/auth/views/login.ejs
+++ b/auth/views/login.ejs
@@ -3,7 +3,7 @@
 
 <h1>Login</h1>
 <%- message %>
-<a href="/restricted">로그인 확인</a>, use "tj" and "foobar".
+<a href="/restricted">login confirmed</a>, use "tj" and "foobar".
 <form method="post" action="/login">
   <p>
     <label for="username">Username:</label>
